<resources>
    <string name="app_name">VposMerchant</string>
    <string name="action_settings">Settings</string>
    <string name="srt_tv_get_started">Get Started</string>
    <string name="str_btn_start_signin">Sing in</string>
    <string name="str_already_instruction">Already have  an account?</string>
    <string name="str_tv_or">Or</string>
    <string name="str_btn_register">Register</string>
    <string name="str_tv_advice">If you don\'t  have a Virtual POS account, go ahead and create one</string>
    <string name="str_edt_first_name">First Name</string>
    <string name="str_edt_last_name">Last Name</string>
    <string name="str_edt_email">example@gmail.com</string>
    <string name="str_tv_registration_intro">Your name is used to personalize your phone with Virtual POS service</string>
    <string name="str_btn_reg_next_1">Next</string>
    <string name="str_tv_screen_2_intro">Your email will be used as your username. Enter your password and confirm it below</string>
    <string name="str_edt_password">Password</string>
    <string name="str_edt_confirm">Confirm</string>
    <string name="str_tv_screen_3_intro">Virtual POS will send a one time SMS message to verify your phone number. Please enter your phone number in the field below</string>
    <string name="str_edt_number">Phone No</string>
    <string name="str_btn_finish">Finish</string>
    <string name="str_verification_code">Code</string>
    <string name="str_btn_previous3">Back</string>
    <string name="str_btn_previous2">Back</string>
    <string name="str_img_btn_add_account_desc">Add New Account</string>
    <string name="str_img_btn_transactions_desc">View transaction history</string>
    <string name="str_img_btn_account_listing_desc">Account listing</string>
    <string name="str_img_btn_notifications_desc">Notifications</string>
    <string name="str_img_btn_make_payment_desc">Make payments</string>
    <string name="str_img_btn_help_desc">Contact us or find help</string>
    <string name="str_tv_message_screen_4">r</string>
    <string name="str_tv_message_screen_3" />
    <string name="str_tv_select_bank">Select your bank</string>
    <string name="str_tv_enter_acc_no" >Account No</string>
    <string name="str_edt_account_no_hint">Enter Your Bank Account Number</string>
    <string name="str_btn_add_account">Save</string>
    <string name="str_btn_print">Test Print</string>
    <string name="str_btn_generate">Generate QR CODE</string>
    <string name="str_tv_amount_desc">Enter Bill Amount</string>
    <string name="str_edt_hint_short_name">Enter Bank Short Name</string>
    <string name="str_edt_bank_name_hint">Enter Bank Name</string>
    <string name="str_edt_bank_code_hint">Enter Bank\'s Swift Code</string>
    <string name="str_btn_add_bank_text">Add Bank</string>
    <string name="str_tv_acc_no">1</string>
    <string name="str_edt_hint_store_name" >Enter store name</string>
    <string name="str_edt_store_name" >Enter store name</string>
    <string name="str_edt_hint_store_contact">Contact Person</string>
    <string name="str_tv_select_pos_bank">Select your bank and enter your account number below</string>
    <string name="str_transaction_list_tv_type">$0,0000 Bill to</string>
    <string name="str_transaction_list_tvdesc">Bill to mr ehimeson</string>
</resources>
