<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_splash_screen_6"
    android:paddingLeft="10dp"
    android:paddingTop="100dp"
    android:paddingRight="10dp"
    android:paddingBottom="10dp">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtBankShortName"
        android:hint="@string/str_edt_hint_short_name"
        android:layout_gravity="center_horizontal"

        android:paddingBottom="@dimen/dim_edt_padding_bottom"
        android:layout_marginBottom="@dimen/edit_text_margin_bottom" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/str_edt_bank_name_hint"
        android:id="@+id/edtBankName"
        android:layout_marginBottom="@dimen/edit_text_margin_bottom" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/str_edt_bank_code_hint"
        android:id="@+id/edtSortCode"
        android:layout_marginBottom="@dimen/edit_text_margin_bottom" />

    <Button
        android:layout_width="202dp"
        android:layout_height="wrap_content"
        android:text="@string/str_btn_add_bank_text"
        android:id="@+id/btnAddBank"
        android:layout_gravity="right"
        android:background="@drawable/btn_bg_blue"
        android:textColor="#ffffffff" />
</LinearLayout>