<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_splash_screen_7"
    android:paddingTop="100dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="10dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.10" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:gravity="center"
            android:text="@string/str_tv_screen_3_intro"
            android:id="@+id/textView3"
            android:layout_weight="0.04"
            tools:ignore="NestedWeights" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/edtVerify"
            android:layout_weight="0.01"
            android:hint="@string/str_verification_code"
            android:layout_marginBottom="@dimen/edit_text_margin_bottom" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/str_tv_message_screen_4"
            android:id="@+id/tvMessage4"
            android:layout_weight="0.04"
            android:textColor="#fffa3119" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="354dp"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout3"
        android:layout_weight="0.16" >



        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_btn_finish"
            android:id="@+id/btnregverify"
            android:background="@drawable/btn_bg_blue"
            android:capitalize="sentences"
            tools:ignore="TextViewEdits"
            android:textColor="#fff"
            android:layout_marginLeft="5dp" />

    </LinearLayout>

</LinearLayout>